Not sure where I left off but it appears to be mouse related.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}",
-                "-lX11"
+                "-lX11",
+                "-lXtst"
             ],
             "options": {
                 "cwd": "${fileDirname}"
